jobster/base/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    service: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  template:
    metadata:
      labels:
        service: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/jobst3r/rest-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              memory: 4Gi
              cpu: 100m
            limits:
              memory: 4Gi
