jobster/base/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: backend
      protocol: TCP
      port: 3333
  selector:
    service: backend
